--- a/loading.html
+++ b/loading.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 				<strong>Owner:</strong> Bob Frenchman<br>
 				<strong>WebMaster:</strong> Dexon<br>
 				<strong>S-Admin:</strong> <br>Forte El Torro, Blazing Banana<br>
-				<strong>Admin:</strong> <br>Pyron, Larry, RoboReptile, Enigma
+				<strong>Admin:</strong> <br>Pyron, Larry, DJ-Red, RoboReptile, Enigma
 				<br><br><br>
 				<span id="url">http://bob.dexontech.net/forum/</span><br><br>
 			</p>
